--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,10 +66,21 @@ img {
   color: var(--main-color);
 }
 
+.hr-line {
+  position: absolute;
+  width: 1600px;
+  height: 0px;
+  left: 0px;
+  top: 80px;
+
+  border: 1px solid #ececec;
+}
+
 /* ==========  HEADER  ==========*/
 
 .header {
-  padding: 32px 0;
+  padding-top: 24px;
+  padding-bottom: 10px;
 }
 
 .header .container {
@@ -151,6 +162,8 @@ img {
 
 .hero {
   background-color: #2f303a;
+  padding-bottom: 178px;
+  padding-top: 220px;
 }
 
 .hero-title {
@@ -161,8 +174,7 @@ img {
   text-transform: uppercase;
   color: var(--light-color);
   text-align: center;
-  padding-top: 220px;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .hero-button {
@@ -181,7 +193,6 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
-  margin-bottom: 178px;
   margin-left: 485px;
   margin-right: 485px;
 }
@@ -190,7 +201,8 @@ img {
 
 /* ==========   ABOUT   ==========*/
 
-.about {
+.about-advantages {
+  padding-top: 108px;
   padding-bottom: 94px;
 }
 
@@ -201,7 +213,6 @@ img {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  padding-top: 108px;
 }
 
 .about-list-subtitle {
@@ -244,6 +255,10 @@ img {
   text-align: center;
 }
 
+.about-activity {
+  padding-bottom: 94px;
+}
+
 /* ==========  END  ABOUT   ==========*/
 
 /* ==========   OUR TEAM   ==========*/
@@ -274,6 +289,14 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
+.team-list-element {
+  padding-bottom: 30px;
+  background-color: var(--light-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 /* ========== END OUR TEAM ==========*/
 
 /* ==========   FOOTER   ==========*/
@@ -288,7 +311,7 @@ img {
   margin-bottom: 9px;
 }
 
-.list-item:first-child {
+.address .list:first-child {
   margin-top: 20px;
 }
 
@@ -318,10 +341,14 @@ img {
 
 /* ========== BUTTON PORTFOLIO  ==========*/
 
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .portfolio-button-list {
   display: flex;
   justify-content: center;
-  padding-top: 94px;
   margin-bottom: 50px;
 }
 
@@ -332,7 +359,6 @@ img {
 .portfolio-element {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 94px;
 }
 
 .portfolio-element-item {
@@ -356,7 +382,13 @@ img {
   line-height: 1.625;
   letter-spacing: 0.03em;
 
+  width: 128px;
+  height: 38px;
+
   color: var(--main-color);
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .portfolio-button-item:hover,
